{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 649,
  "lineage": "c0c42134-622a-59dc-a4e4-0d6e9d934276",
  "resources": [
    {
      "module": "module.EKS.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:security-group/sg-0b1fee2bdbc6d1dea",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b1fee2bdbc6d1dea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a4ec145eff8f989b"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "myapp-eks-cluster-cluster-2023070314415460060000000b",
            "name_prefix": "myapp-eks-cluster-cluster-",
            "owner_id": "815919245801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-cluster",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-cluster",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7d0c7653ec62213"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.EKS.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:security-group/sg-0a4ec145eff8f989b",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4ec145eff8f989b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b1fee2bdbc6d1dea"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b1fee2bdbc6d1dea"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b1fee2bdbc6d1dea"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b1fee2bdbc6d1dea"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b1fee2bdbc6d1dea"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b1fee2bdbc6d1dea"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "myapp-eks-cluster-node-2023070314415460000000000a",
            "name_prefix": "myapp-eks-cluster-node-",
            "owner_id": "815919245801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-node",
              "environment": "dev",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-node",
              "environment": "dev",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7d0c7653ec62213"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.EKS.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-829829345",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b1fee2bdbc6d1dea",
            "security_group_rule_id": "sgr-09fb417548a2cd8b6",
            "self": false,
            "source_security_group_id": "sg-0a4ec145eff8f989b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.EKS.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-202765974",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a4ec145eff8f989b",
            "security_group_rule_id": "sgr-0bb10e74e6c3a68a6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1359818514",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a4ec145eff8f989b",
            "security_group_rule_id": "sgr-0b0f897b951da2958",
            "self": false,
            "source_security_group_id": "sg-0b1fee2bdbc6d1dea",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-9354009",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a4ec145eff8f989b",
            "security_group_rule_id": "sgr-0d8f9c92a98fd31ff",
            "self": false,
            "source_security_group_id": "sg-0b1fee2bdbc6d1dea",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-909321073",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a4ec145eff8f989b",
            "security_group_rule_id": "sgr-077642004a6fe07a4",
            "self": false,
            "source_security_group_id": "sg-0b1fee2bdbc6d1dea",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-628039506",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a4ec145eff8f989b",
            "security_group_rule_id": "sgr-070ab93e4ce788f0a",
            "self": false,
            "source_security_group_id": "sg-0b1fee2bdbc6d1dea",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1104030875",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a4ec145eff8f989b",
            "security_group_rule_id": "sgr-05fdc596fb9397468",
            "self": false,
            "source_security_group_id": "sg-0b1fee2bdbc6d1dea",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-980749633",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a4ec145eff8f989b",
            "security_group_rule_id": "sgr-0dbaaa966276abda8",
            "self": false,
            "source_security_group_id": "sg-0b1fee2bdbc6d1dea",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-699135236",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a4ec145eff8f989b",
            "security_group_rule_id": "sgr-04a26ef47c2196ed1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-15273587",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a4ec145eff8f989b",
            "security_group_rule_id": "sgr-09d06c2c789be18bc",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1531531876",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a4ec145eff8f989b",
            "security_group_rule_id": "sgr-0cc6dec44ac2675c3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:network-acl/acl-0578bad3220f9fb12",
            "default_network_acl_id": "acl-0578bad3220f9fb12",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0578bad3220f9fb12",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "815919245801",
            "subnet_ids": [
              "subnet-018147394ea7d0395",
              "subnet-099c58d9e68f6023a",
              "subnet-0a99346dbd0456d79",
              "subnet-0abbc51aae6b07ca5"
            ],
            "tags": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0e7d0c7653ec62213"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:route-table/rtb-0a51d90782ae02ba4",
            "default_route_table_id": "rtb-0a51d90782ae02ba4",
            "id": "rtb-0a51d90782ae02ba4",
            "owner_id": "815919245801",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e7d0c7653ec62213"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:security-group/sg-0acbff1f6231f1746",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0acbff1f6231f1746",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "815919245801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0e7d0c7653ec62213"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036b58e2f406e6294",
            "association_id": "eipassoc-0aff8220f9e432e4f",
            "domain": "vpc",
            "id": "eipalloc-036b58e2f406e6294",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-06ab9bde2c7ad8ac5",
            "private_dns": "ip-10-0-3-234.eu-west-2.compute.internal",
            "private_ip": "10.0.3.234",
            "public_dns": "ec2-52-56-173-164.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.173.164",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myapp-vpc-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:internet-gateway/igw-07721a110861d617f",
            "id": "igw-07721a110861d617f",
            "owner_id": "815919245801",
            "tags": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0e7d0c7653ec62213"
          },
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036b58e2f406e6294",
            "association_id": "eipassoc-0aff8220f9e432e4f",
            "connectivity_type": "public",
            "id": "nat-0d4239f7946a35792",
            "network_interface_id": "eni-06ab9bde2c7ad8ac5",
            "private_ip": "10.0.3.234",
            "public_ip": "52.56.173.164",
            "subnet_id": "subnet-018147394ea7d0395",
            "tags": {
              "Name": "myapp-vpc-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_eip.nat",
            "module.VPC.module.vpc.aws_internet_gateway.this",
            "module.VPC.module.vpc.aws_subnet.public",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0999094bbd0d819911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d4239f7946a35792",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0999094bbd0d81991",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_eip.nat",
            "module.VPC.module.vpc.aws_internet_gateway.this",
            "module.VPC.module.vpc.aws_nat_gateway.this",
            "module.VPC.module.vpc.aws_route_table.private",
            "module.VPC.module.vpc.aws_subnet.public",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07721a110861d617f",
            "id": "r-rtb-0ce650ffb238797c81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ce650ffb238797c8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_internet_gateway.this",
            "module.VPC.module.vpc.aws_route_table.public",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:route-table/rtb-0999094bbd0d81991",
            "id": "rtb-0999094bbd0d81991",
            "owner_id": "815919245801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d4239f7946a35792",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myapp-vpc-private",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-private",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7d0c7653ec62213"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:route-table/rtb-0ce650ffb238797c8",
            "id": "rtb-0ce650ffb238797c8",
            "owner_id": "815919245801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07721a110861d617f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myapp-vpc-public",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-public",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7d0c7653ec62213"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bfd888d6065fcfe",
            "route_table_id": "rtb-0999094bbd0d81991",
            "subnet_id": "subnet-0abbc51aae6b07ca5"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_route_table.private",
            "module.VPC.module.vpc.aws_subnet.private",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041d9baa248e00bda",
            "route_table_id": "rtb-0999094bbd0d81991",
            "subnet_id": "subnet-0a99346dbd0456d79"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_route_table.private",
            "module.VPC.module.vpc.aws_subnet.private",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088f8805759f9b994",
            "route_table_id": "rtb-0ce650ffb238797c8",
            "subnet_id": "subnet-018147394ea7d0395"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_route_table.public",
            "module.VPC.module.vpc.aws_subnet.public",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a09db5bb6f4de6a",
            "route_table_id": "rtb-0ce650ffb238797c8",
            "subnet_id": "subnet-099c58d9e68f6023a"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_route_table.public",
            "module.VPC.module.vpc.aws_subnet.public",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:subnet/subnet-0abbc51aae6b07ca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abbc51aae6b07ca5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815919245801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e7d0c7653ec62213"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:subnet/subnet-0a99346dbd0456d79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a99346dbd0456d79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815919245801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e7d0c7653ec62213"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:subnet/subnet-018147394ea7d0395",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018147394ea7d0395",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815919245801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e7d0c7653ec62213"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:subnet/subnet-099c58d9e68f6023a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099c58d9e68f6023a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815919245801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e7d0c7653ec62213"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:vpc/vpc-0e7d0c7653ec62213",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0578bad3220f9fb12",
            "default_route_table_id": "rtb-0a51d90782ae02ba4",
            "default_security_group_id": "sg-0acbff1f6231f1746",
            "dhcp_options_id": "dopt-0ecd2b1f6dd641f45",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e7d0c7653ec62213",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a51d90782ae02ba4",
            "owner_id": "815919245801",
            "tags": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}